--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -373,7 +373,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -385,7 +385,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -397,7 +397,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -409,7 +409,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -428,7 +428,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -447,7 +447,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -466,7 +466,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -499,7 +499,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -518,7 +518,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -537,7 +537,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -556,7 +556,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -575,7 +575,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -594,7 +594,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -613,7 +613,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <div class="swiper-slide card cardss shadow" style="width: 200px">
@@ -632,7 +632,7 @@
           <h6 class="ms-3 pt-2 card-subtitle mb-2 text-muted">400 g</h6>
           <div class="d-flex justify-content-between p-3">
             <p>₹34</p>
-            <a href="#" class="btn btn-success">Add</a>
+            <a href="#" class="btn btn-outline-success">Add</a>
           </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -705,6 +705,7 @@
     <footer class="main bg-light">
       <p>“Blinkit” is owned & managed by "Blink Commerce Private Limited" (formerly known as Grofers India Private Limited) and is not related, linked or interconnected in whatsoever manner or nature, to “GROFFR.COM” which is a real estate services business operated by “Redstone Consultancy Services Private Limited”.
     </p>
+    <p class="fw-bold">Made with ❤️ by Prince raj</p>
     </footer>
     <footer class="my-footer bg-light">
       <div class="display-1 border-bottom">Made with ❤️</div>
