--- a/index.html
+++ b/index.html
@@ -676,28 +676,34 @@
         </div>
         <div class="categories-links gap-5 ms-5 d-flex">
           <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Lead</a></li>
-            <li><a href="#">Value</a></li>
+            <li><a href="#">Vegetables & Fruits</a></li>
+            <li><a href="#">Cold Drinks & Juices</a></li>
+            <li><a href="#">Bakery & Biscuits</a></li>
+            <li><a href="#">Dry Fruits, Masala & Oil</a></li>
+            <li><a href="#">Paan Corner</a></li>
+            <li><a href="#">Pharma & Wellness</a></li>
+            <li><a href="#">Personal Care</a></li>
+            <li><a href="#">Beauty & Cosmetics</a></li>
+            <li><a href="#">Print Store</a></li>
           </ul>
           <ul>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Security</a></li>
-            <li><a href="#">Mobile</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Dairy & Breakfast</a></li>
+            <li><a href="#">Instant & Frozen Food</a></li>
+            <li><a href="#">Sweet Tooth</a></li>
+            <li><a href="#">Sauces & Spreads</a></li>
+            <li><a href="#">Organic & Premium</a></li>
+            <li><a href="#">Cleaning Essentials</a></li>
+            <li><a href="#">Ice Creams & Frozen Desserts</a></li>
+            <li><a href="#">Toys & Games</a></li>
           </ul>
           <ul>
-            <li><a href="#">Partner</a></li>
-            <li><a href="#">Express</a></li>
-            <li><a href="#">Seller</a></li>
-            <li><a href="#">Spotlight</a></li>
-            <li><a href="#">Warehouse</a></li>
-            <li><a href="#">Deliver</a></li>
+            <li><a href="#">Munchies</a></li>
+            <li><a href="#">Tea, Coffee & Health Drinks</a></li>
+            <li><a href="#">Atta, Rice & Dal</a></li>
+            <li><a href="#">Chicken, Meat & Fish</a></li>
+            <li><a href="#">Baby Care</a></li>
+            <li><a href="#">Home & Office</a></li>
+            <li><a href="#">Pet Care</a></li>
           </ul>
         </div>
       </div>
