--- a/index.html
+++ b/index.html
@@ -96,7 +96,61 @@
         <i class="fa-solid fa-cart-shopping"></i> My Cart
       </div>
     </nav>
-
+    <!-- --------------------------- After Screen size change -->
+      <div class="item-others d-flex">
+        <div class="other m-1">
+          <img class="tw-transition-opacity tw-h-full tw-w-full tw-opacity-100" width="100%" src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=70,metadata=none,w=360/app/images/products/sliding_image/240092a.jpg?ts=1687324818" data-pf="reset">
+          <p style="width: fit-content;" class="bg-light ms-3 mt-2"><i class="fa-solid fa-square"></i>14 Mins</p>
+          <h5 class="mx-2 fw-bold">Lays</h5>
+          <p class="d-flex mx-2">40g</p>
+          <div class="d-flex justify-content-between mx-2">
+            <p class="text-muted">₹20</p>
+            <div class="btn btn-outline-success">Add</div>
+          </div>
+        </div>
+        <div class="other m-1">
+          <img class="tw-transition-opacity tw-h-full tw-w-full tw-opacity-100" width="100%" src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=70,metadata=none,w=360/app/images/products/sliding_image/391305a.jpg" data-pf="reset">
+          <p style="width: fit-content;" class="bg-light ms-3 mt-2"><i class="fa-solid fa-square"></i>14 Mins</p>
+          <h5 class="mx-2 fw-bold">Potato</h5>
+          <p class="d-flex mx-2">1 kg</p>
+          <div class="d-flex justify-content-between mx-2">
+            <p class="text-muted">₹20</p>
+            <div class="btn btn-outline-success">Add</div>
+          </div>
+        </div>
+        <div class="other m-1">
+          <img class="tw-transition-opacity tw-h-full tw-w-full tw-opacity-100" width="100%" src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=70,metadata=none,w=360/app/images/products/sliding_image/11150a.jpg?ts=1668077366" data-pf="reset">
+          <p style="width: fit-content;" class="bg-light ms-3 mt-2"><i class="fa-solid fa-square"></i>14 Mins</p>
+          <h5 class="mx-2 fw-bold">Uncle Chips</h5>
+          <p class="d-flex mx-2">40g</p>
+          <div class="d-flex justify-content-between mx-2">
+            <p class="text-muted">₹20</p>
+            <div class="btn btn-outline-success">Add</div>
+          </div>
+        </div>
+        <div class="other m-1">
+          <img class="tw-transition-opacity tw-h-full tw-w-full tw-opacity-100" width="100%" src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=70,metadata=none,w=360/app/images/products/sliding_image/240092a.jpg?ts=1687324818" data-pf="reset">
+          <p style="width: fit-content;" class="bg-light ms-3 mt-2"><i class="fa-solid fa-square"></i>14 Mins</p>
+          <h5 class="mx-2 fw-bold">Lays</h5>
+          <p class="d-flex mx-2">40g</p>
+          <div class="d-flex justify-content-between mx-2">
+            <p class="text-muted">₹20</p>
+            <div class="btn btn-outline-success">Add</div>
+          </div>
+        </div>
+        <div class="other m-1">
+          <img class="tw-transition-opacity tw-h-full tw-w-full tw-opacity-100" width="100%" src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=70,metadata=none,w=360/app/images/products/sliding_image/240092a.jpg?ts=1687324818" data-pf="reset">
+          <p style="width: fit-content;" class="bg-light ms-3 mt-2"><i class="fa-solid fa-square"></i>14 Mins</p>
+          <h5 class="mx-2 fw-bold">Lays</h5>
+          <p class="d-flex mx-2">40g</p>
+          <div class="d-flex justify-content-between mx-2">
+            <p class="text-muted">₹20</p>
+            <div class="btn btn-outline-success">Add</div>
+          </div>
+        </div>
+      </div>
+      <h3 class="fw-bold ps-2 m-3">Shop by category</h3>
+    <!-- --------------------------- On Full Screen  -->
     <div class="hero-1">
       <img
         src="https://cdn.grofers.com/cdn-cgi/image/f=auto,fit=scale-down,q=50,metadata=none,w=1800/layout-engine/2022-05/Group-33704.jpg"
@@ -339,11 +393,11 @@
       </div>
     </div>
     <!-- ------------------- one -->
-<div class="my-category d-flex justify-content-between px-5">
+<div class="my-category justify-content-between px-5">
   <h2 class="fw-bold">Dairy, Bread & Eggs</h2>
   <a class="text-decoration-none text-success" href="#"><h3>see all</h3></a>
 </div>
-    <div class="swiper mySwiper px-5 mb-3">
+    <div class="swiper mySwiper swip px-5 mb-3">
       <div class="swiper-wrapper">
         <div class="swiper-slide card cardss shadow" style="width: 200px">
           <img
@@ -477,11 +531,11 @@
     </div>
 
     <!-- ------------------- Two -->
-<div class="my-category d-flex justify-content-between px-5">
+<div class="my-category justify-content-between px-5">
   <h2 class="fw-bold">Snacks & Munchies</h2>
   <a class="text-decoration-none text-success" href="#"><h3>see all</h3></a>
 </div>
-    <div class="swiper mySwiper px-5 mb-3">
+    <div class="swiper mySwiper swip px-5 mb-3">
       <div class="swiper-wrapper">
         <div class="swiper-slide card cardss shadow" style="width: 200px">
           <img
